squash: mv generate, Dockerfile build OK --- up
up Use

docker build, out-binary

gen1

up gen

ig

gen_portainer

mv tpl

mv generate

fix

up

export params

mv out

chmod +x up

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,11 @@
 *.vswp
 #*.docx
 
-lang-replacement
 *.mdf
-godiff*
-transfer*
+generate/*
+!generate/tpl
+!generate/*.sh
+!generate/*.xml
+# lang-replacement
+# godiff*
+# transfer*
