squash: dictGenerate update, +replacement --- up custom
git fetch -t

out xml2json

getRepo

clean

xml2json

custom: replace; dict

view

fix

dockerig

up

generate: update build ENV

getRepo; ENV BRANCH/TAG

+slim

pt with alpine

yarn,npm preset; grunt inst -g

same imagePack err

libpng*

grunt inst inDocker; use slim-stretchImg;

gruntfile; mv conf

up imgs

replace, latest

dev_clone

pt use cache

use cache

cache

dockerig

upper pt

up

up: with dictReplace.txt

sort, +说明;

replace: view public.tar.gz

dictGen: ADD ./generate/dictReplace.txt /generate

up ig

readme: use

dictReplace

with @@@: non trans

jdus host barge 20089

fix

+pt

mv dir

notes

test ins: image-webpack-loader

webpack.production

automake gcc

fix

ig dir output

npmBuild

up readme

replacement Dockerfile

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,14 @@ generate/*
 !generate/tpl
 !generate/*.sh
 !generate/*.xml
+!generate/*.md
+!generate/dictReplace.txt
 lang-replacement
 # godiff*
 # transfer*
+
+output/*
+!output/*.sh
+!output/.cache
+!output/.cache/Dockerfile
+node_modules
