squash: 二期汉化 output/portainer_zh.xml; readme+detail.md --- up dictRep
pt

new build pt

revertStacks: hand notes字典

fix: BRANCH="sam-custom"

layer: go api first

change details

##echo 123: force new build.

更新汉化字典

# 方式二：details

up README

wget newest: dictReplace.txt

up

up

readme change

# TAG="2.9.1"
    TAG="v291-patch"

TAG="2.9.1-patch"

reGen up: up encode

https://gitee.com/g-devops/lang-replacement/raw/dev/output/portainer_zh.xml

replace

genUp1

+dictReplace

ig

up gen

fix

fix

FROM golang:1.16.8-alpine3.14 as api

f

FROM golang:1.16.9-alpine3.14 as api

format sync

# PT/API

u

## +templates

--- a/replacement/Dockerfile.alpine
+++ b/replacement/Dockerfile.alpine
@@ -36,12 +36,11 @@ ADD ./conf/webpack.production.js /conf/webpack.production.js
 ADD ./conf/gruntfile.js /conf/gruntfile.js
 COPY --from=bins /generate/lang-replacement /usr/local/bin/
 WORKDIR /output
-
 ENV \
     REPO="https://gitee.com/g-devops/fk-portainer" \ 
     # BRANCH="release/2.9" \
-    TAG="2.9.1"
-
+    # TAG="2.9.1"
+    TAG="v291-patch"
 # VOLUME ["/data"]
 # EXPOSE 8080
 ENTRYPOINT ["/entry.sh"]
